@@ -365,6 +365,9 @@ static const char *def_menu_video_ttf[] =
     "ttf_wpwp",
     "ttf_wpws",
     "ttf_wpxy",
+    "--",
+    "ttf_blinkc",
+    "ttf_autoboxdraw",
     NULL
 };
 #endif
