@@ -22,6 +22,9 @@
     layout names for setting code pages. (Wengier)
   - Improved handling of Ctrl+C/Ctrl+Break for shell-
     based DOS programs. (Wengier)
+  - Added menu options "Show TTF blinking cursor" and
+    "CJK box-drawing symbol detection" under "Video" =>
+    "TTF options" to toggle the options. (Wengier)
   - Command-line option -fastlaunch will now suppress
     messages by "automountall=true" option. (Wengier)
   - The return value of AL in Int21/AX=0Eh is no longer
